cocogen/tests/fail/duplicate_name_with_uid.ccn

start phase hello {
    actions {
        pass p;
    }
};

traversal dom {
    uid = dom
};

phase dodom {
    actions {
        dodom;
    }
};

traversal dodom {
    uid = dom
};

root node ast {
    attributes {
        int val
    }
};
